inputs - added box sizing to fix width over spill.

--- a/src/scss/elements/inputs.scss
+++ b/src/scss/elements/inputs.scss
@@ -28,6 +28,7 @@ input, textarea {
   border-radius: 4px;
   background-color: $white;
   outline: 0;
+  box-sizing: border-box;
 
   &:focus {
     box-shadow: 0 0 3px $primary;
